[tool.poetry]
name = "evergreen.py"
version = "1.4.1"
description = "Python client for the Evergreen API"
authors = [
    "Alexander Costas <alexander.costas@mongodb.com>",
    "Cristopher Stauffer <cristopher.stauffer@mongodb.com>",
    "David Bradford <david.bradford@mongodb.com>",
    "Jeff Zambory <jeff.zambory@mongodb.com>",
    "Jim O'Leary <jim.oleary@mongodb.com>",
    "Lydia Stepanek <lydia.stepanek@mongodb.com>",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/evergreen-ci/evergreen.py"
packages = [
    { include = "evergreen", from = "src" },
]

[tool.poetry.scripts]
evg-api = "evergreen.cli.main:main"

[tool.poetry.dependencies]
python = "^3.6"
Click = "^7"
python-dateutil = "^2"
PyYAML = "^5"
requests = "^2"
structlog = "^19"
tenacity = "^5"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-black = "^0.3.7"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
pytest-mypy = "^0.4"
pytest-pydocstyle = "^2.0"
sphinx = "^3.1.1"
sphinx-readable-theme = "^1.3.0"
ghpusher = "^0.2.1"
black = "^19.10b0"

[tool.black]
line-length = 100
