[tool.poetry]
name = "evergreen.py"
version = "3.11.4"
description = "Python client for the Evergreen API"
authors = [
    "DevProd Services & Integrations Team <devprod-si-team@mongodb.com>",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/evergreen-ci/evergreen.py"
packages = [
    { include = "evergreen", from = "src" },
]

[tool.poetry.scripts]
evg-api = "evergreen.cli.main:main"

[tool.poetry.dependencies]
python = "^3.9"
Click = ">=7"
python-dateutil = ">=2"
PyYAML = ">=5"
requests = ">=2"
structlog = ">=19"
pydantic = ">=1"

[tool.poetry.dev-dependencies]
pytest = "^8.4"
pytest-black = "^0.3.7"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
pytest-mypy = "^0.8"
pytest-pydocstyle = "^2.3"
sphinx = "^5.0"
sphinx-readable-theme = "^1.3.0"
ghpusher = "^0.2.2"
black = "^19.10b0"
isort = "^5.5.4"
pytest-isort = "^3.1"
flake8 = "^7.3"
flake8-bugbear = "^24.12.12"
pre-commit = "^2.7.1"
coveralls = "^3.0.0"
types-PyYAML = "^6.0.1"
types-python-dateutil = "^2.8.2"
types-requests = "^2.26.0"
responses = "^0.25.0"

[tool.pytest.ini_options]
flake8-ignore = "W605 W503 W291 E203 E501 F821"
addopts = "--flake8 --black --pydocstyle --mypy --isort"
testpaths = [
    "src",
    "tests",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
